<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_subiranuncio"
            android:icon="@mipmap/anyadir"
            android:title="@string/Subir_anuncio" />
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/listas"
            android:title="@string/mensajes" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/chat"
            android:title="Mi perfil" />
    </group>

    <item android:title="YourCloset">
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/icons"
                android:title="Nuestra App" />
            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/icons8"
                android:title="Cerrar sesión" />

            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/apagar"
                android:title="@string/salir" />

        </menu>
    </item>

</menu>
