    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar">
        </include>

        <LinearLayout

            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:background="#FFFF"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/area_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iconoarticulo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contextClickable="true"
                            app:srcCompat="@drawable/ic_card_travel_black" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp">

                            <EditText
                                android:id="@+id/campo_nombre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/hint_campo_1_articulo_anuncio"
                                android:inputType="text"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/area_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/area_nombre"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_correo"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_border_color_black" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_telefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp">

                            <EditText
                                android:id="@+id/campo_articulo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/hint_campo_2_descripcion_anuncio"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/area_precio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/area_telefono"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_telefono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_attach_money_black" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/anuncio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp">

                            <EditText
                                android:id="@+id/campo_precio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/hint_campo_3_precio_anuncio"
                                android:inputType="numberDecimal"
                                android:singleLine="true" />


                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/area_foto"
                        android:layout_width="381dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_fotos"
                            android:layout_width="22dp"
                            android:layout_height="22dp"

                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/filter" />

                        <TextView
                            android:id="@+id/tv_imag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:layout_weight="1"
                            android:text="Clasifica tu artículo"
                            android:textColor="@color/colorAccent"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/area_selector"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/area_telefono"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radioarriba"
                            android:text="Parte de arriba"
                            >

                        </RadioButton>





                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/area"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/area_telefono"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radiobajo"
                            android:text="Parte de abajo"
                            >

                        </RadioButton>





                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/area_"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/area_telefono"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/radiocomplemento"
                            android:text="Complemento"
                            >

                        </RadioButton>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/area_calzado"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/area_telefono"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/calzado"
                            android:text="Calzado"
                            >

                        </RadioButton>
                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/area_fotos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_fotos_cam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_attach_file_black" />

                        <TextView
                            android:id="@+id/tv_imagen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:layout_weight="1"
                            android:text="@string/sube_imagen"
                            android:textColor="@color/colorAccent"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imagePreview"
                            android:layout_width="match_parent"
                            android:layout_height="111dp"

                            android:layout_marginBottom="8dp"

                            android:background="@drawable/imageredonda"
                            android:scaleType="center"
                            android:src="@mipmap/aadir" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/area_ubicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/img_ubicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_room_black_36dp" />

                        <!--//imagen de este imageview no me dejaba reproducir en menos de 8.0 WTF-->
                        <TextView
                            android:id="@+id/boton_ubicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/ubicacion"
                            android:textColor="@color/colorAccent"
                            android:textSize="20dp"
                            android:textStyle="bold" />


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <Button
                        android:id="@+id/ampliarmapa2"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:background="@drawable/imageredonda"
                        android:elevation="16dp"
                        android:gravity="center"
                        android:text="@string/ampliar_mapa" />

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/cardmap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="4dp">

                        <fragment
                            android:id="@+id/fragment_subiranuncio"
                            class="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            tools:layout="@layout/activity_maps" />


                    </android.support.v7.widget.CardView>

                    <RelativeLayout
                        android:id="@+id/bottom_bar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginTop="16dp"
                        android:gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/aceptarAnuncio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
                            android:background="@drawable/botonredondo"
                            android:elevation="8dp"
                            android:text="@string/publicar_anuncio"
                            android:textColor="@android:color/white" />
                    </RelativeLayout>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

</LinearLayout>